--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -526,12 +526,6 @@
                                 </artifactItem>
                                 <!--Store Extensions-->
                                 <artifactItem>
-                                    <groupId>io.siddhi.extension.store.mongodb</groupId>
-                                    <artifactId>siddhi-store-mongodb</artifactId>
-                                    <version>${siddhi.store.mongodb.version}</version>
-                                    <type>jar</type>
-                                </artifactItem>
-                                <artifactItem>
                                     <groupId>io.siddhi.extension.store.rdbms</groupId>
                                     <artifactId>siddhi-store-rdbms</artifactId>
                                     <version>${siddhi.store.rdbms.version}</version>
@@ -997,6 +991,11 @@
                                     <version>${carbon.analytics.version}</version>
                                 </feature>
 
+                                <feature>
+                                    <id>org.wso2.carbon.streaming.integrator.core.feature</id>
+                                    <version>${carbon.analytics.version}</version>
+                                </feature>
+
                                 <!--simulator feature-->
                                 <feature>
                                     <id>org.wso2.carbon.event.simulator.core.feature.group</id>
@@ -1054,20 +1053,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
-                    <execution>
-                        <id>add-in-place-tool</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <!-- download file -->
-                                <get src="https://product-dist.wso2.com/downloads/in-place/release/update.zip" dest="${project.build.directory}/update.zip" verbose="false" usetimestamp="true" />
-                                <unzip src="${project.build.directory}/update.zip" dest="${project.build.directory}" />
-                            </target>
-                        </configuration>
-                    </execution>
                     <execution>
                         <phase>package</phase>
                         <configuration>
